[gd_scene load_steps=19 format=2]

[ext_resource path="res://models/frame_without_rear.obj" type="ArrayMesh" id=1]
[ext_resource path="res://models/door_handle_l.obj" type="ArrayMesh" id=2]
[ext_resource path="res://models/door_handle_r.obj" type="ArrayMesh" id=3]
[ext_resource path="res://scripts/node/Cupboard.gd" type="Script" id=4]
[ext_resource path="res://models/door_r.obj" type="ArrayMesh" id=5]
[ext_resource path="res://models/door_l.obj" type="ArrayMesh" id=6]
[ext_resource path="res://models/small_shelf.obj" type="ArrayMesh" id=7]
[ext_resource path="res://resources/CupboardMaterial.tres" type="Material" id=8]
[ext_resource path="res://models/hinges_l.obj" type="ArrayMesh" id=9]
[ext_resource path="res://resources/HingesMaterial.tres" type="Material" id=10]
[ext_resource path="res://models/hinges_r.obj" type="ArrayMesh" id=11]
[ext_resource path="res://models/frame_rear.obj" type="ArrayMesh" id=12]
[ext_resource path="res://models/working_shelf.obj" type="ArrayMesh" id=13]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 508, 20, 304.8 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 508, 9.525, 60.325 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 508, 9.525, 152.4 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 508, 9.525, 60.325 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 508, 1, 1 )

[node name="Cupboard" type="Spatial"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="frame" type="Node" parent="."]

[node name="frame_without_rear" type="MeshInstance" parent="frame"]
mesh = ExtResource( 1 )
material/0 = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="frame_rear" type="MeshInstance" parent="frame"]
visible = false
mesh = ExtResource( 12 )
material/0 = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 628.255, 971.851, 998.686 )
visible = false

[node name="door_l" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35, 4, 592 )
mesh = ExtResource( 6 )
material/0 = ExtResource( 8 )

[node name="hinges_l" type="MeshInstance" parent="door_l"]
mesh = ExtResource( 9 )
material/0 = ExtResource( 10 )

[node name="door_handle_l" type="MeshInstance" parent="door_l"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 10 )

[node name="door_r" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 975, 4, 592 )
mesh = ExtResource( 5 )
material/0 = ExtResource( 8 )

[node name="hinges_r" type="MeshInstance" parent="door_r"]
mesh = ExtResource( 11 )
material/0 = ExtResource( 10 )

[node name="door_handle_r" type="MeshInstance" parent="door_r"]
mesh = ExtResource( 3 )
material/0 = ExtResource( 10 )

[node name="Shelves" type="Spatial" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="BottomShelf" type="Area" parent="Shelves"]
__meta__ = {
"_edit_lock_": true
}

[node name="shape" type="CollisionShape" parent="Shelves/BottomShelf"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 508, -10, 304.8 )
shape = SubResource( 1 )

[node name="LowerSmallShelf" type="Area" parent="Shelves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 317.5, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="shape" type="CollisionShape" parent="Shelves/LowerSmallShelf"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 508, -9.525, 60.325 )
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="Shelves/LowerSmallShelf"]
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="LowerSmallShelf2" type="Area" parent="Shelves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 609.6, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="shape" type="CollisionShape" parent="Shelves/LowerSmallShelf2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 508, -9.525, 60.325 )
shape = SubResource( 2 )

[node name="mesh" type="MeshInstance" parent="Shelves/LowerSmallShelf2"]
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="WorkingShelf" type="Area" parent="Shelves"]
__meta__ = {
"_edit_lock_": true
}

[node name="working_shelf" type="MeshInstance" parent="Shelves/WorkingShelf"]
mesh = ExtResource( 13 )
material/0 = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="Shelves/WorkingShelf"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 508, 873.125, 152.4 )
shape = SubResource( 3 )

[node name="UpperShelf1" type="Area" parent="Shelves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1193.8, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Shelves/UpperShelf1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 508, -9.525, 60.325 )
shape = SubResource( 4 )

[node name="small_shelf" type="MeshInstance" parent="Shelves/UpperShelf1"]
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="UpperShelf2" type="Area" parent="Shelves"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1422.4, 0 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Shelves/UpperShelf2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 508, 0, 0 )
shape = SubResource( 5 )

[node name="small_shelf2" type="MeshInstance" parent="Shelves/UpperShelf2"]
mesh = ExtResource( 7 )
material/0 = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Inventory" type="Node" parent="."]

[connection signal="input_event" from="Shelves/BottomShelf" to="." method="_on_BottomShelf_input_event"]
[connection signal="input_event" from="Shelves/LowerSmallShelf" to="." method="_on_LowerSmallShelf_input_event"]
[connection signal="input_event" from="Shelves/LowerSmallShelf2" to="." method="_on_LowerSmallShelf_input_event"]
[connection signal="input_event" from="Shelves/WorkingShelf" to="." method="_on_WorkingShelf_input_event"]
[connection signal="input_event" from="Shelves/UpperShelf1" to="." method="_on_UpperShelf1_input_event"]
